style.css
/* Début du CSS Géneral { */
body, input {
    font-family: 'Raleway-VariableFont_wght.ttf', sans-serif;
}
header, section {
    width: 90%;
    margin : auto;
}
header {
    padding: 30px;
}
section {
    margin-bottom: 20px;
}
footer {
    margin: 0;
    padding-bottom: 2%;
    position: absolute;
    left: 0;
    right: 0;
}
nav {
    width: 100%;
}
a {
    text-decoration: none;
    color: black;
}
input {
    font-size: 1.2em;
    height: 40px;
}
i, .a_head {
    color: #0065FC;
}
img {
    object-fit: cover;
}
h3 {
    margin-left: 20px;
}
/*CSS général pour classe*/
.div_heb_pop, .div_heb_result, .div_activite {
    box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.05);
}
.sec_heb, .div_cnt_activ {
    justify-content: space-between;
}
.sec_heb_font, .i_map, footer {
    background-color: #F2F2F2;
}
.nav_hea, .div_foot_link {
    width: 33%;
}
.div_a_inscrire, a {
    padding: 3px;
}
.i_filtre, .div_filtre_icone {
    background-color: #DEEBFF;
}
.i_info_filtre, .btn_search  {
    background-color: #0065FC;
}
.i_info_filtre, .btn_search {
    color: white;
}
.img_activite_size {
    height: 25%;
}
.div_ctn_filtre, .div_heb_po, .div_heb_cnt, .sec_heb, .div_cnt_activ, .div_heb_pop, nav, header, .a_heb_pop /*display: flex;*/{
    display: flex;
}
/*Fin du CSS général } */

/* CSS pour gèrer le footer*/

.div_foot_link {
    flex-wrap: wrap;
    padding-left: 3%;
}
.a_foot {
    margin-bottom: 10px;
    font-size: 1.2em;
}
/*Ce code gère la position des block du header*/
.div_hea {
    width: inherit;
}
.head_blo_right {
    text-align: right;
    justify-content: flex-end;
    width: auto;
}
.img_head{
    width: 6em;
}
.a_head {
    margin-right: 50px;
}


/*Ce code gère le cnt de la section filtre*/
.div_filtre {
    margin-right: 10px;
}

.btn_search {
    border: none;
    border-top-right-radius: 10px;
    border-bottom-right-radius: 10px;
}
.p_filtre {
    display: block ruby;
    border: 2px solid #F2F2F2;
    border-radius: 30px;
    padding-right: 10px;
    border-left: none;
}
.div_filtre_icone {
    padding: 5px;
    border-radius: 30px;
    z-index: 20;
    border: 2px solid #DEEBFF;
    margin-left: -2px;
    margin-bottom: -2px;
    margin-top: -2px;
    min-width: 20px;
}
.i_filtre {
    font-size: 1.2em;
}
.i_map {
    margin-right: 0px;
    position: relative;
    font-size: 2em;
    margin-right: -4.4px;
    padding: 5px;
    padding-left: 8px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    top : 5px;
}
.p_margin {
    margin: 50px;
    margin-left: 0;
}
.h_filtre {
    margin: 10px;
}
.i_info_filtre {
    border: solid 1px #DEEBFF;
    border-radius: 10px;
}

/*.div_filtre_icone:hover {
    background-color: #0065FC;
}*/
/*.i_filtre:hover {
    background-color: #0065FC;
    color: #DEEBFF;
}*/
.p_filtre:hover {
    border-color: #0065FC;
    color: #0065FC;
    background-color: #F2F2F2;
}
/* Ce code en particulier gère la partie hébergement*/
.img_heb {
    max-height: 150px;
    width: 96%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
.txt_heb {
    margin: 2px;
    text-align: left;
    
}
.txt_heb_margin {
    margin-left: 20px;
}
.img_heb_pop{
    width: 35.5%;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    max-height: inherit;
}
.div_heb_pop {
    padding: 1%;
    margin-bottom: 20px;
    background-color: white;
    border-radius: 10px;
}
.heb_pop_desc {
    width: max-content;
    margin-left: 20px;
}
.i_gris {
    color: #F2F2F2;
}
.i_heb_pop {
    color: black;
    float: right;
    font-size: 1.5em;
    margin-right: 4%;
}
.div_heb_result {
    width: 30%;
    margin-bottom: 20px;
    background-color: white;
    border-radius: 20px;
    padding-top: 0.5%;
    text-align: center;
}
.a_heb_pop {
    height: 150px;
    width: 100%;
}
/* Ce code en particulier gére la position et le comportement des aside de la section hébergement*/
.asi_heb {
    border-radius: 15px;
    padding: 1%;
}
.asi_heb_left {
    width: 65%;
}
.asi_heb_right {
    width: 27%;
}

/* Les activités */
.sec_activite {
    min-height: 500px;
}

.img_activite {
    width: 100%;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    max-height: 150px;
}
.img_activite_high {
    max-height: 400px;
    height: 400px;
} 
.asi_activite {
    width: 22%;
}
.div_activite {
    border-radius: 20px;
    padding-bottom: 5px;
    margin-top: 20px;
}
/*Tentative auto crop*/

.div_heb_cnt {
    justify-content: space-around;
    flex-wrap: wrap;
    text-align: center;
}
.div_cnt_pop {
    height: 95%;
}

@media all /*and (min-width: 1024px)*/ and (max-width: 1358px) {
    .asi_heb_left, .asi_heb_right {
        width: 100%;
        margin-bottom: 30px;
    }
    .sec_heb {
        flex-wrap: wrap;
    }
    .div_heb_pop {
        width: 30%;
        height: 50%;
        margin-top: 10px;
    }
    .div_cnt_pop {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }
    .h_heb_pop {
        margin: 3px;
    }
    .img_heb_pop {
        max-height: 125px;
    }
    .div_cnt_pop {
        justify-content: space-around;
    }
    .div_heb_pop {
        width: 40%;
        height: 30%;
        margin-top: 10px;
    }
    .h3_mob_tab {
        margin-left: 0;
    }
}
/* ### CSS for mobile ### */
@media all and (orientation: portrait) /*Resolution d'écran Verticale*/
{
    /* hebergement { */
    .sec_heb {
        display: flex;
        flex-wrap: wrap-reverse;
    }

    .asi_heb_left {
        width: 90%;
    }

    .sec_heb_font {
        background-color: white;
    }
    .asi_heb_right {
        width: 90%;
        margin-bottom: 30px;
    }
    .div_heb_result {
        margin-bottom: 50px;
    }
    .div_heb_result {
        width: 80%;
    }
    .div_heb_pop {
        max-width: 96%;
        margin-left: 1%;
    }
    /* } */

    /* Activité { */
    .div_cnt_activ {
        flex-wrap: wrap;
        height: inherit;
    }
    .center-cropped, .img_activite_size  {
        width: 100%;
        height: 200px;
        background-position: center center;
        background-repeat: no-repeat;
    }
    /* } */

    /*footer {*/
        footer {
            margin-top: 30px;
        }
        .div_foot_link, .asi_activite {
            width: 97%;
            text-align: center;
        }

        nav {
            display: flex;
            flex-wrap: wrap;
        }

        p,a,h3,h4,.a_foot {
            font-size: 1.4em;
        }
    /*}*/

    header {
        display: flex;
        padding: 30px;
        flex-direction: row;
        justify-content: center;
        height: 150px;
        }
    .nav_hea {
        align-self: flex-end;
        width: 100%;
        display: flex;
        justify-content: space-between;
    }
    .div_hea {
        height: 100px;
        width: auto;
    }
    .a_head {
        margin: 0;
    }

    #a_Head_L,#a_Head_R {
        position: absolute;
        font-size: 1.5em;
        width: 45%;
        padding-bottom: 20px;
    }
    .sec_filtre {
        margin-top: 40px;
    }
    #a_Head_L {
        left: 0;
        top: 10%;
        padding-left: 5%;
        border-bottom: 2px solid;
        
    }
    #a_Head_R{
        right: 0;
        top: 10%;
        padding-right: 5%;
        border-bottom: 2px solid gray;
        color: gray;
    }
    .nav_hea {
        align-self: flex-end;
        width: 100%;
        display: flex;
        justify-content: space-between;
        text-align: center;
    }
    .img_head {
        width: 8em;
    }
    .div_heb_pop {
        width: 100%;
        height: 23%;
    }
    .a_heb_pop {
        height: auto;
        width: 100%;
    }

    .img_activite {
        max-height: 400px;
    }

    .div_filtre {
        font-size: 1.6em;
        margin-bottom: 30px;
    }
    
    .div_activite {
        margin-bottom: 50px;
    }
    .div_ctn_filtre {
        flex-wrap: wrap;
    }
    .p_mob_sty{
        margin: 0;
    }
}



/*
.nav_hea {
    align-self: flex-end;
    width: 100%;
    display: flex;
    justify-content: space-between;
    text-align: center;
}
position: absolute;
left: 0;
top: 10%;
padding-left: 5%;
width: 45%;
padding-bottom: 20px;
border-bottom: 2px solid;
font-size: 1.5em;

position: absolute;
right: 0;
top: 10%;
padding-right: 5%;
width: 45%;
padding-bottom: 20px;
border-bottom: 2px solid gray;
color: gray;
font-size: 1.5em;

.img_head {
    width: 8em;
}
*/
  

